--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "pg": "^8.16.3"
   },
   "devDependencies": {
+    "@prisma/config": "^7.3.0",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
     "@types/morgan": "^1.9.10",
