--- a/backend/.env copy
+++ b/backend/.env copy
@@ -1,4 +1,4 @@
-# DATABASE_URL="postgresql://postgres.mcujjebolmwtpdgrfadf:bv3Hz0dfvgnfALTT@aws-1-ap-northeast-1.pooler.supabase.com:5432/postgres" Migration
-DATABASE_URL="postgresql://postgres.mcujjebolmwtpdgrfadf:bv3Hz0dfvgnfALTT@aws-1-ap-northeast-1.pooler.supabase.com:5432/postgres"
+
+DATABASE_URL="postgresql://postgres.extfaqdcdmknsmulebks:["Boonpad.20444"]@aws-1-ap-northeast-2.pooler.supabase.com:6543/postgres"
 PORT=3000
 NODE_ENV=development
